# fmplay-macos-app

./: .gitignore  Cargo.toml  README.md  unused_code_analysis.md
.github/workflows/: build.yml
assets/: AppIcon.icns
scripts/: build_app.sh
src/: config.rs  main.rs  player.rs  stations.rs  ui.rs
src/ui/: app.html  error.html  loading.html
