[package]
name = "fmplay_macos_app"
version = "1.4.3"
edition = "2024"

[dependencies]
serde = { version = "1", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
tao = { version = "0.34", default-features = false, features = ["rwh_06"] }
wry = { version = "0.53", default-features = false }
objc2 = { version = "0.6", features = ["exception", "disable-encoding-assertions"] }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = true
